[project]
name = "station-sdk-psa-firmware-upload"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "station-service-sdk",
]

[tool.uv.sources]
station-service-sdk = { git = "https://github.com/Soochol/station-service-sdk" }
